// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ fHvAHq"
  >
    text
    <span
      class="sc-gsTCUz bsNakH"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ fHvAHq"
  >
    text
    <span
      class="sc-gsTCUz jeTqyN"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
